--- a/myStyles.css
+++ b/myStyles.css
@@ -11,7 +11,7 @@ h2{text-align: center;}
 
 
 div.gallery {
-  margin: 5px;
+  margin: auto;
   border: 1px solid #ccc;
   float: left;
   width: 180px;
@@ -24,9 +24,15 @@ div.gallery:hover {
 div.gallery img {
   width: 100%;
   height: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 div.desc {
   padding: 15px;
   text-align: center;
+}
+
+div.gallery:hover {
+  transform: scale(1.5);
 }
